ISIS-2062: fixes z-index for menu items (issue when overlapping)
opinionated change: switches flex-direction to 'row' for the intro

--- a/antora/supplemental-ui/css/home/style.css
+++ b/antora/supplemental-ui/css/home/style.css
@@ -128,7 +128,8 @@ h6 {
   transition: all 0.5s;
   z-index: 997;
   background: #fff;
-  box-shadow: 0px 6px 9px 0px rgba(0, 0, 0, 0.06);
+  /* disabled because it renders over top menu when medium display width
+  box-shadow: 0px 6px 9px 0px rgba(0, 0, 0, 0.06); */  
 }
 
 #header #logo h1 {
@@ -165,6 +166,7 @@ h6 {
   position: relative;
   background: url("../../img/home/intro-carousel/carousel-1.jpg") no-repeat;
   background-size: cover;
+  z-index: -1; /* guarantees to not hide overlapping menu buttons */
 }
 
 #intro .intro-content {
@@ -188,9 +190,9 @@ h6 {
   align-items: center;
   -webkit-box-orient: vertical;
   -webkit-box-direction: normal;
-  -webkit-flex-direction: column;
-  -ms-flex-direction: column;
-  flex-direction: column;
+  -webkit-flex-direction: row;
+  -ms-flex-direction: row;
+  flex-direction: row;
   text-align: center;
 }
 
